Remove slashes for gh-pages

--- a/chats.html
+++ b/chats.html
@@ -7,9 +7,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-    <link href="/css/ratchet.min.css" rel="stylesheet">
-    <link href="/css/main.css" rel="stylesheet">
-    <script src="/js/ratchet.min.js"></script>
+    <link href="css/ratchet.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <script src="js/ratchet.min.js"></script>
   </head>
   <body>
     <header class="bar bar-nav">
@@ -23,7 +23,7 @@
     <div class="content">
       <ul class="table-view">
         <li class="table-view-cell media">
-          <a href="/chat.html" class="navigate-right" data-transition="slide-in">
+          <a href="chat.html" class="navigate-right" data-transition="slide-in">
             <img class="media-object pull-left" src="http://lorempixel.com/50/50">
             <div class="media-body">
               <p>Fantastic Pony</p>
@@ -31,7 +31,7 @@
           </a>
         </li>
         <li class="table-view-cell media">
-          <a href="/chat.html" class="navigate-right" data-transition="slide-in">
+          <a href="chat.html" class="navigate-right" data-transition="slide-in">
             <img class="media-object pull-left" src="http://lorempixel.com/50/50">
             <div class="media-body">
               <p>Rainbow Cats</p>
@@ -39,7 +39,7 @@
           </a>
         </li>
         <li class="table-view-cell media">
-          <a href="/chat.html" class="navigate-right" data-transition="slide-in">
+          <a href="chat.html" class="navigate-right" data-transition="slide-in">
             <img class="media-object pull-left" src="http://lorempixel.com/50/50">
             <div class="media-body">
               <p>Pink Fluffy Unicorns</p>
