--- a/compose.html
+++ b/compose.html
@@ -7,9 +7,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-    <link href="/css/ratchet.min.css" rel="stylesheet">
-    <link href="/css/main.css" rel="stylesheet">
-    <script src="/js/ratchet.min.js"></script>
+    <link href="css/ratchet.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <script src="js/ratchet.min.js"></script>
   </head>
   <body>
     <header class="bar bar-nav">
