--- a/chat.html
+++ b/chat.html
@@ -7,13 +7,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-    <link href="/css/ratchet.min.css" rel="stylesheet">
-    <link href="/css/main.css" rel="stylesheet">
-    <script src="/js/ratchet.min.js"></script>
+    <link href="css/ratchet.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <script src="js/ratchet.min.js"></script>
   </head>
   <body>
     <header class="bar bar-nav">
-      <a href="/chats.html" class="btn btn-link btn-nav pull-left" data-transition="slide-out">
+      <a href="chats.html" class="btn btn-link btn-nav pull-left" data-transition="slide-out">
         <span class="icon icon-left"></span>
         Chats
       </a>
