--- a/chats.html
+++ b/chats.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="bar bar-nav">
-      <a href="/frontend" class="btn btn-link btn-nav pull-left" data-transition="slide-out">
+      <a href="/" class="btn btn-link btn-nav pull-left" data-transition="slide-out">
         <span class="icon icon-left"></span>
         Back
       </a>
