--- a/compose.html
+++ b/compose.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="bar bar-nav">
-      <a href="/frontend" class="btn btn-link btn-nav pull-left" data-transition="slide-out">
+      <a href="/" class="btn btn-link btn-nav pull-left" data-transition="slide-out">
         <span class="icon icon-left"></span>
         Back
       </a>
@@ -24,7 +24,7 @@
       <div class="lb-wrap">
         <form class="lb-compose">
           <textarea rows="20" placeholder="Be creative!"></textarea>
-          <a href="/frontend" class="btn" data-transition="slide-in">Send letter</a>
+          <a href="/" class="btn" data-transition="slide-in">Send letter</a>
         </form>
       </div>
     </div>
