Change questions and picture size

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
           <div class="slide-group">
             <div class="slide">
               <div class="card">
-                <img src="http://lorempixel.com/375/350">
+                <img src="http://lorempixel.com/375/200">
                 <div class="lb-card-row">
                   <img class="lb-profile-pic" src="http://lorempixel.com/50/50">
-                  <h3>Do you like cats?</h3>
+                  <h3>Coffee or tea?</h3>
                 </div>
                 <div class="lb-card-row">
                   <p>Similarity Index: <span class="lb-si-high">53%</span></p>
@@ -40,7 +40,7 @@
             </div>
             <div class="slide">
               <div class="card">
-                <img src="http://lorempixel.com/375/350">
+                <img src="http://lorempixel.com/375/200">
                 <div class="lb-card-row">
                   <img class="lb-profile-pic" src="http://lorempixel.com/50/50">
                   <h3>Do you like cats?</h3>
@@ -55,10 +55,10 @@
             </div>
             <div class="slide">
               <div class="card">
-                <img src="http://lorempixel.com/375/350">
+                <img src="http://lorempixel.com/375/200">
                 <div class="lb-card-row">
                   <img class="lb-profile-pic" src="http://lorempixel.com/50/50">
-                  <h3>Do you like cats?</h3>
+                  <h3>Describe career goals.</h3>
                 </div>
                 <div class="lb-card-row">
                   <p>Similarity Index: <span class="lb-si-low">3%</span></p>
